# heat-drought-rice-modeling

./: .gitignore  AGENTS.md  README.md  environment.yml  heat_drought_download_manifest.xlsx  pyproject.toml  requirements.txt  run_pipeline.py
config/: config.yaml
docs/: gee_province_daily_climate_export.md  notebooklm-workflow.md  project-facts.md  references.md  report_language_policy.md
gee/: gee_export_province_daily_climate_2000_2024.js
reports/: claim_registry.yml  defense_qa.md  descriptive_evidence_claims.yml  figure_table_claims.yml  final_figures_tables_plan.md  paper_draft.md
scripts/: 00_inventory.py  01_prepare_boundaries.py  02_preprocess_climate.py  03_preprocess_remote_sensing.py  04_prepare_crop_mask_phenology.py  05_spatial_aggregate.py  06_prepare_statistics.py  07_build_indices.py  08_modeling.py  09_make_figures.py  10_diagnostics.py  11_generate_report.py  12_stage_existing_downloads.py  12_validate_2024_event.py  13_build_admin_crosswalk.py  13_download_yield_panel_sources.py  14_research_required_data_sources.py  14_risk_register.py  15_build_yield_proxy_panel.py  15_diagnose_exposure_coverage.py  16_build_annual_exposure_panel.py  16_download_yield_proxy_rasters.py  17_assign_admin_provinces.py  17_import_manual_yield_panel.py  18_build_province_panel.py  18_generate_risk_action_report.py  19_build_province_chd_panel.py  20_import_province_daily_climate.py  21_build_province_chd_from_daily_climate.py  22_import_province_grain_backfill.py  23_freeze_data_version.py  24_audit_model_results.py  25_run_robustness_suite.py  (+6 more)
src/: __init__.py  (+31 more)
(+47 files in other folders)
